--- a/qasports/pyproject.toml
+++ b/qasports/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datasets>=3.6.0",
     "mcp[cli]>=1.9.3",
     "ruff>=0.11.13",
 ]
