--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -7,7 +7,7 @@ on:
   - cron: "0 12 1 * *"
 
 jobs:
-  build:
+  ruff_check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
